--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "nextjs-app",
+  "name": "nextjs-pwa",
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
     "build": "next build",
-    "export": "next export",
-    "serve": "nextbuild && firebase emulators:start --only functions,hosting",
-    "start": "next build && next start -p 4000",
+    "start": "next start -p 4000",
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.9",
+    "@apollo/client": "^3.5.9",
+    "@emotion/css": "^11.7.1",
+    "graphql": "^16.3.0",
+    "next": "12.0.10",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-awesome-slider": "^4.1.0",
+    "react-dom": "17.0.2",
+    "sitemap": "^7.1.1"
   },
   "devDependencies": {
-    "@emotion/css": "^11.7.1",
-    "@emotion/react": "^11.7.1",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.9",
-    "next-pwa": "^5.4.4"
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.0.10"
   }
 }
